fix font on mobile

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -153,6 +153,8 @@ $menu-list-border-left: 1px solid $penny-green-invert
 
 // responsiveness
 +tablet-only
+  .body
+    font-family: Harmattan
   .blog-list-item .featured-thumbnail
     flex-basis: 50%
     min-height: 300px
